# lmanage

./: .gitignore  .yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-2.0.txt  README.md  __main__.py  delinquentcontent.csv  folder_walk.sh  f{yaml_path}  output.csv  output.txt  pandas_multiple.xlsx  pyproject.toml  requirements.txt  test.csv  test_delinquent_content.py
.github/: CODEOWNERS
.github/workflows/: configurator_deploy.yaml  pythonapp.yml
.history/lmanage/: capture_instance_permission_structure_20230417184940.py  capture_instance_permission_structure_20230417185017.py  capture_instance_permission_structure_20230417232303.py  capture_instance_permission_structure_20230417232337.py  capture_instance_permission_structure_20230417232457.py  capture_instance_permission_structure_20230417233218.py  capture_instance_permission_structure_20230418000052.py  provision_instance_permission_structure_20230414215957.py  provision_instance_permission_structure_20230417225422.py  provision_instance_permission_structure_20230417233830.py  provision_instance_permission_structure_20230417234312.py  provision_instance_permission_structure_20230417234815.py  provision_instance_permission_structure_20230417234912.py  provision_instance_permission_structure_20230417235001.py  provision_instance_permission_structure_20230417235127.py  provision_instance_permission_structure_20230418000519.py  (+1 more)
.vim/: coc-settings.json
instructions/: capturator_README.md  configurator_README.md  looker_settings_capture.md  mapview_README.md
lmanage/: .vimspector.json  None  Pipfile  capture_instance_permission_structure.py  cli.py  delinquent_content.py  delinquent_user.py  find_content_with_lookml_params.py  find_replace.sh  getContentWithViews.py  get_content_with_views.py  lmanage_handler.py  logger_config.py  looker_auth.py  looker_config.py  looker_config_handler.py  looker_config_reader.py  looker_config_saver.py  provision_instance_permission_structure.py  schedule_juggle.py  tests  validate_content.py  workspace.code-workspace
look_backup/: Look_1_Subtotals Example - Basic Table.json  Look_21_Subtotals - Table with Pivoted Subtotals.json  Look_5_Subtotals - Year, Quarter, Month (only Month Subtotaled).json
output/: bugaboo.py  demo_dashboard_output.yaml  demo_dashboard_output_content.yaml  demo_output.yaml  demo_output_content.yaml  demo_output_content_content.yaml  dev.yaml  dev_content.yaml  dev_output.yaml  dev_output_content.yaml  frank.csv  hugo.csv  instance_mapview.xlsx  l233_output.yaml  l233_output_content.yaml  profserv_output.yaml  profserv_output_content.yaml
tests/: fake_methods_data.py  migrate_schedule.py  test_capture_looks.py  test_create_folders.py  test_create_user_permissions_user_permission.py  test_delinquent_content.py  test_delinquent_user.py  test_find_content_with_lookml_params.py  test_getContentWithViews.py  test_get_content_with_views.py  test_lmanage.py  test_user_permission.py  test_utils_create_df.py  test_utils_folder_config.py  test_utils_group_config.py  test_utils_role_config.py  test_validate_content.py  tt_get_content_with_views.py  tt_utils_role_config.py  xx.py
(+213 files in other folders)
